# fight-detection

./: .gitattributes  .gitmodules  main.py  pyproject.toml
models/mm/pth/: litehrnet18_coco_256x192-6bace359_20211230.pth  rtmo-s_8xb32-600e_body7-640x640-dac2bf74_20231211.pth  td-hm_hrnet-w32_8xb64-210e_coco-256x192-81c58e40_20220909.pth
models/reid/: osnet_x0_25_market1501.pt
scripts/: convert_reid_model.py
src/: config.py  detector.py  pipeline.py  strongsort_tracker.py
